Add DidDocumentAdapter